--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
     "gatsby": "^1.9.17",
+    "gatsby-cli": "^1.1.6",
     "gatsby-link": "^1.6.15",
     "gatsby-plugin-react-helmet": "^1.0.5"
   },
