--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gatsby": "^1.9.17",
     "gatsby-cli": "^1.1.6",
     "gatsby-link": "^1.6.15",
+    "gatsby-plugin-google-analytics": "^1.0.7",
     "gatsby-plugin-react-helmet": "^1.0.5"
   },
   "keywords": [
